--- a/workspace/package.json
+++ b/workspace/package.json
@@ -61,6 +61,8 @@
     "lint": "nx run-many --target=lint --all",
     "lint:api": "nx run api:lint",
     "lint:fix": "nx run-many --target=lint:fix --all",
+    "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
+    "lint:md:fix": "markdownlint-cli2 --fix \"**/*.md\" \"#node_modules\"",
     "lint:web": "nx run web:lint",
     "nx": "nx",
     "prepare": "husky",
