feat(tooling): Add conventional-changelog for automated CHANGELOG generation
✨ Changes:
- Installed conventional-changelog-cli for automated changelog
- Added .versionrc.json for conventional commits configuration
- Restructured CHANGELOG.md to use conventional format
- Added npm scripts: 'changelog' and 'changelog:first'
- Fixed Air path in api project.json to use $HOME/go/bin/air
- Updated .markdownlint.json formatting

📝 New Scripts:
- npm run changelog        # Generate changelog from commits
- npm run changelog:first  # Generate full changelog
- npm run version          # Bump version + update changelog

🔧 Commit Format:
- feat(scope): description     # New features
- fix(scope): description      # Bug fixes
- docs(scope): description     # Documentation
- chore(scope): description    # Maintenance

Benefits:
✅ Automated changelog from git history
✅ Consistent commit message format
✅ Semantic versioning support
✅ Professional release notes
✅ Fixed Air not found error in tasks

--- a/workspace/apps/api/project.json
+++ b/workspace/apps/api/project.json
@@ -44,7 +44,7 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd apps/api && air",
+        "command": "cd apps/api && $HOME/go/bin/air",
         "cwd": "."
       }
     },
