--- a/workspace/package.json
+++ b/workspace/package.json
@@ -31,6 +31,8 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "concurrently": "^9.1.0",
+    "conventional-changelog-cli": "^5.0.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^8.57.0",
     "husky": "^9.1.7",
     "jasmine-core": "~5.1.0",
@@ -53,6 +55,8 @@
     "build": "nx run-many --target=build --all",
     "build:api": "nx run api:build",
     "build:web": "nx run web:build",
+    "changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s",
+    "changelog:first": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0",
     "dev": "concurrently \"npm run api\" \"npm run web\"",
     "docker:down": "docker compose -f infra/docker/docker-compose.yml down",
     "docker:logs": "docker compose -f infra/docker/docker-compose.yml logs -f",
@@ -76,6 +80,7 @@
     "typecheck": "npm run typecheck:web && npm run typecheck:api",
     "typecheck:api": "cd apps/api && go vet ./...",
     "typecheck:web": "nx run web:typecheck",
+    "version": "npm run changelog && git add CHANGELOG.md",
     "web": "nx run web:serve"
   },
   "version": "1.0.0",
