feat: Change API port from 8081 to 8088 and fix Angular dev server security warning
✨ Changes:
- Updated API port from 8081 to 8088 across all configs
- Changed Angular dev server host from 0.0.0.0 to localhost
- This eliminates the security warning about binding to open connections

📝 Files Updated:
Backend:
- apps/api/internal/config/config.go: Default port 8088

Frontend:
- apps/web/src/environments/environment.ts: API URL port 8088
- apps/web/project.json: host changed to localhost
- apps/web/angular.json: host changed to localhost

Documentation:
- README.md: Updated URLs to port 8088
- workspace/README.md: Updated URLs to port 8088
- workspace/docs/DEPLOYMENT.md: API_PORT=8088
- workspace/docs/QUICKSTART.md: Updated troubleshooting commands

VSCode:
- .vscode/tasks.json: Updated Docker kill task for port 8088

🔒 Security Improvement:
The Angular dev server now binds to localhost instead of 0.0.0.0,
which is more secure for local development and removes the warning.
If you need to access from other devices, you can temporarily change
it back to 0.0.0.0 in project.json.

--- a/workspace/apps/web/angular.json
+++ b/workspace/apps/web/angular.json
@@ -116,7 +116,7 @@
           "defaultConfiguration": "development",
           "options": {
             "port": 4200,
-            "host": "0.0.0.0"
+            "host": "localhost"
           }
         },
         "extract-i18n": {
