--- a/workspace/apps/web/project.json
+++ b/workspace/apps/web/project.json
@@ -69,7 +69,7 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "options": {
         "buildTarget": "web:build",
-        "host": "0.0.0.0",
+        "host": "localhost",
         "port": 4200
       }
     },
