feat: Migrate to sqlc + pgx + golang-migrate (pro analytics stack)
🚀 Major Architecture Upgrade

Migrated from GORM to the industry-standard stack used by:
- Betting companies
- Real-time analytics systems
- Sports data companies

## Stack Changes

### ✅ sqlc (SQL → Go Code Generation)
- Write raw SQL queries (perfect for analytics)
- Generates type-safe Go code at compile time
- No ORM magic, no reflection overhead
- Catches SQL errors before runtime

### ✅ pgx v5 (PostgreSQL Driver)
- 3-5x faster than database/sql
- Native PostgreSQL protocol
- Built-in connection pooling (25 max, 5 min conns)
- Production-grade performance

### ✅ golang-migrate (Migrations)
- Simple .sql migration files (up/down)
- Runs on app startup
- CLI tools for dev workflow
- Docker/K8s compatible

## New Files

### Database Layer
- `internal/infrastructure/database/pgx.go` - Connection pool setup
- `internal/infrastructure/database/migrate.go` - Migration runner

### Migrations
- `migrations/000001_init_schema.up.sql` - Complete schema with indexes
- `migrations/000001_init_schema.down.sql` - Rollback script

### sqlc Generated Code
- `internal/repository/sqlc/` - Type-safe query functions
  - `users.sql.go` - User queries
  - `teams.sql.go` - Team queries
  - `players.sql.go` - Player queries
  - `matches.sql.go` - Match queries
  - `match_events.sql.go` - Event queries (shots, passes, goals)
  - `statistics.sql.go` - Analytics queries
  - `models.go` - Generated models
  - `querier.go` - Interface for all queries

### SQL Queries (Source)
- `internal/repository/sqlc/queries/*.sql` - Raw SQL queries

### Configuration
- `sqlc.yaml` - sqlc configuration
- `README_SQLC.md` - Complete documentation

## Updated Files

### Main Application
- `cmd/api/main.go`:
  - Runs migrations on startup
  - Creates pgx connection pool
  - Graceful shutdown with pool cleanup

### Makefile
New commands:
```bash
make db-up          # Run migrations
make db-down        # Rollback last migration
make db-reset  

--- a/workspace/apps/api/Makefile
+++ b/workspace/apps/api/Makefile
@@ -1,7 +1,9 @@
-.PHONY: help run build test lint swagger migrate-up migrate-down migrate-create docker-build
+.PHONY: help run build test lint swagger db-up db-down db-reset db-create docker-build
 
 BINARY_NAME=footie-api
 MAIN_PATH=cmd/api/main.go
+DB_URL=postgres://footie_user:footie_password@localhost:5436/footie?sslmode=disable
+MIGRATIONS_PATH=./migrations
 
 help: ## Show this help
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
@@ -12,6 +14,8 @@ install: ## Install dependencies
 	go install github.com/cosmtrek/air@latest
 	go install github.com/swaggo/swag/cmd/swag@latest
 	go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+	go install github.com/sqlc-dev/sqlc/cmd/sqlc@latest
+	go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
 
 run: ## Run the application
 	go run $(MAIN_PATH)
@@ -40,14 +44,32 @@ lint-fix: ## Run linter and fix issues
 swagger: ## Generate swagger documentation
 	swag init -g $(MAIN_PATH) -o docs
 
-migrate-up: ## Run database migrations
-	go run cmd/migrate/main.go up
+# Database commands (using golang-migrate)
+db-up: ## Run database migrations
+	migrate -path $(MIGRATIONS_PATH) -database "$(DB_URL)" up
 
-migrate-down: ## Rollback last migration
-	go run cmd/migrate/main.go down
+db-down: ## Rollback last migration
+	migrate -path $(MIGRATIONS_PATH) -database "$(DB_URL)" down 1
 
-migrate-create: ## Create new migration (use: make migrate-create name=migration_name)
-	migrate create -ext sql -dir migrations -seq $(name)
+db-reset: ## Drop all tables and re-run migrations
+	migrate -path $(MIGRATIONS_PATH) -database "$(DB_URL)" drop -f
+	migrate -path $(MIGRATIONS_PATH) -database "$(DB_URL)" up
+
+db-create: ## Create new migration (use: make db-create name=add_xg_field)
+	migrate create -ext sql -dir $(MIGRATIONS_PATH) -seq $(name)
+
+db-status: ## Show migration status
+	migrate -path $(MIGRATIONS_PATH) -database "$(DB_URL)" version
+
+db-force: ## Force migration version (use: make db-force version=1)
+	migrate -path $(MIGRATIONS_PATH) -database "$(DB_URL)" force $(version)
+
+# sqlc commands
+sqlc-generate: ## Generate Go code from SQL
+	sqlc generate
+
+sqlc-vet: ## Vet SQL queries
+	sqlc vet
 
 seed: ## Seed database
 	go run cmd/seed/main.go
@@ -79,4 +101,3 @@ deps-update: ## Update dependencies
 	go mod tidy
 
 .DEFAULT_GOAL := help
-
