feat: Add database migration scripts to root package.json
Added convenient npm scripts for database operations:

📦 New Scripts:
- `npm run db:up` - Run all pending migrations
- `npm run db:down` - Rollback last migration
- `npm run db:reset` - Drop all tables and re-run migrations
- `npm run db:status` - Check current migration version
- `npm run db:create` - Create new migration file
- `npm run sqlc:generate` - Generate Go code from SQL queries
- `npm run sqlc:vet` - Validate SQL queries

These scripts wrap the migrate CLI tool for easier access from the workspace root.

Example usage:
```bash
npm run db:up       # Run migrations
npm run db:status   # Check version (currently: 1)
npm run sqlc:generate  # Generate type-safe Go code
```

--- a/workspace/package.json
+++ b/workspace/package.json
@@ -57,6 +57,11 @@
     "build:web": "nx run web:build",
     "changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s",
     "changelog:first": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0",
+    "db:up": "cd apps/api && $HOME/go/bin/migrate -path ./migrations -database \"postgres://footie_user:footie_password_change_me@localhost:5436/footie?sslmode=disable\" up",
+    "db:down": "cd apps/api && $HOME/go/bin/migrate -path ./migrations -database \"postgres://footie_user:footie_password_change_me@localhost:5436/footie?sslmode=disable\" down 1",
+    "db:reset": "cd apps/api && $HOME/go/bin/migrate -path ./migrations -database \"postgres://footie_user:footie_password_change_me@localhost:5436/footie?sslmode=disable\" drop -f && $HOME/go/bin/migrate -path ./migrations -database \"postgres://footie_user:footie_password_change_me@localhost:5436/footie?sslmode=disable\" up",
+    "db:status": "cd apps/api && $HOME/go/bin/migrate -path ./migrations -database \"postgres://footie_user:footie_password_change_me@localhost:5436/footie?sslmode=disable\" version",
+    "db:create": "cd apps/api && $HOME/go/bin/migrate create -ext sql -dir ./migrations -seq",
     "dev": "concurrently \"npm run api\" \"npm run web\"",
     "docker:down": "docker compose -f infra/docker/docker-compose.yml down",
     "docker:logs": "docker compose -f infra/docker/docker-compose.yml logs -f",
@@ -70,6 +75,8 @@
     "lint:web": "nx run web:lint",
     "nx": "nx",
     "prepare": "husky",
+    "sqlc:generate": "cd apps/api && $HOME/go/bin/sqlc generate",
+    "sqlc:vet": "cd apps/api && $HOME/go/bin/sqlc vet",
     "test": "nx run-many --target=test --all",
     "test:affected": "nx affected --target=test",
     "test:api": "nx run api:test",
