feat: Implement sqlc-based handlers and Redis Commander
Backend Refactoring:
- ✅ Created BaseHandler with sqlc queries and event publisher
- ✅ Implemented MatchHandler with real-time event publishing
- ✅ Implemented HealthHandler
- ✅ Removed old GORM-based handlers (auth, user, team, player, match)
- ✅ Updated router to use new sqlc-based handlers
- ✅ Fixed all type conversions for pgtype.Numeric
- ✅ Added errors.Is() for proper error wrapping

Real-Time Features:
- ✅ Match events now publish to Redis Streams + Pub/Sub
- ✅ WebSocket clients receive instant updates
- ✅ Proper handling of nullable fields (PositionX/Y, Description)

API Endpoints (Working):
- GET /health - Health check
- GET /api/v1/matches - List matches
- GET /api/v1/matches/:id - Get match details
- GET /api/v1/matches/:id/events - Get match events
- POST /api/v1/matches/:id/events - Create event + broadcast

Infrastructure:
- ✅ Added Redis Commander on port 8089
- ✅ Fixed migrate.go to use errors.Is()
- ✅ Fixed WebSocket client error handling
- ✅ Cleaned up linter warnings

Docker Compose:
- Added redis-commander service (http://localhost:8089)
- Credentials: admin/admin
- Profile: tools (start with --profile tools)

TODO (Future):
- Implement auth handler (JWT, register, login)
- Implement user handler (CRUD)
- Implement team handler (CRUD + statistics)
- Implement player handler (CRUD + statistics)
- Add authentication middleware to protected routes

--- a/workspace/infra/docker/docker-compose.yml
+++ b/workspace/infra/docker/docker-compose.yml
@@ -42,6 +42,24 @@ services:
       timeout: 3s
       retries: 5
 
+  # Redis Commander for Redis GUI (optional)
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: footie-redis-commander
+    restart: unless-stopped
+    environment:
+      REDIS_HOSTS: local:redis:6379
+      HTTP_USER: admin
+      HTTP_PASSWORD: admin
+    ports:
+      - "8089:8081"
+    depends_on:
+      - redis
+    networks:
+      - footie-network
+    profiles:
+      - tools
+
   # PgAdmin for database management (optional)
   pgadmin:
     image: dpage/pgadmin4:latest
